Created Enum for cell types. Added Choose Change options.

--- a/main/Templates/main/seeker.html
+++ b/main/Templates/main/seeker.html
@@ -36,16 +36,16 @@
         <li class="seeker-item" id="play">
             <ul>Play
                 <br>
-                <li class="seeker-option play">Run</li>
-                <li class="seeker-option play">Reset</li>
-                <li class="seeker-option play">Reset All</li>
+                <li class="seeker-option play" id="run">Run</li>
+                <li class="seeker-option play" id="reset">Reset</li>
+                <li class="seeker-option play" id="reset-all">Reset All</li>
             </ul>
         </li>
         <li class="seeker-item" id="size">
             <ul>Size
                 <br>
-                <li class="seeker-option size">Add Row</li>
-                <li class="seeker-option size">Add Column</li>
+                <li class="seeker-option size" id="add-row">Add Row</li>
+                <li class="seeker-option size" id="add-column">Add Column</li>
             </ul>
         </li>
         <li class="seeker-item" id="algorithm">
@@ -56,6 +56,9 @@
         <li class="seeker-item" id="change">
             <ul>Choose Change
                 <br>
+                <li class="seeker-option change" id="treasure">Add Treasure</li>
+                <li class="seeker-option change" id="start">Set Start</li>
+                <li class="seeker-option change" id="obstacle">Add Obstacle</li>
             </ul>
         </li>
     </ul>
