--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,7 @@ Designed for seeker.html
 
 .cell {
     height: 1em;
+    font-size: 0em;
     background-color: peru;
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
