Depth First Search implemented

--- a/main/Templates/main/seeker.html
+++ b/main/Templates/main/seeker.html
@@ -51,6 +51,8 @@
         <li class="seeker-item" id="algorithm">
             <ul>Choose Algorithm
                 <br>
+                <li class="seeker-option algorithm" id="bfs">Breadth First Search</li>
+                <li class="seeker-option algorithm" id="dfs">Depth First Search</li>
             </ul>
         </li>
         <li class="seeker-item" id="change">
