--- a/assets/style.css
+++ b/assets/style.css
@@ -14,12 +14,12 @@
 Designed for seeker.html
 */
 :root {
-    --rowNum: 3;
-    --colNum: 5;
+    --rowNum: 10;
+    --colNum: 10;
 }
 
 #seeker-body {
-    background-color: sandybrown;
+    background-color: white;
     color: black;
 }
 
@@ -36,13 +36,13 @@ Designed for seeker.html
     display: grid;
     grid-template-rows: repeat(var(--rowNum), auto);
     grid-template-columns: repeat(var(--colNum), auto);
-    background-color: saddlebrown;
+    background-color: antiquewhite;
     padding: 10px;
 }
 
 .cell {
     height: 1em;
-    background-color: peru;
+    background-color: white;
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
 }
@@ -60,7 +60,10 @@ Designed for seeker.html
     list-style-type: none;
     margin: auto;
     overflow: hidden;
-    background-color: saddlebrown;
+    background-color: antiquewhite;
+    border-width: .1em;
+    border-style: solid;
+    border-color: black;
     color: red;
 }
 
@@ -77,7 +80,7 @@ Designed for seeker.html
     z-index: 1;
     text-align: inherit;
     font-size: .8em;
-    color: white;
+    color: grey;
     display: none;
 }
 
