Path generates an accurate list of integers

--- a/main/Templates/main/seeker.html
+++ b/main/Templates/main/seeker.html
@@ -53,6 +53,7 @@
                 <br>
                 <li class="seeker-option algorithm" id="bfs">Breadth First Search</li>
                 <li class="seeker-option algorithm" id="dfs">Depth First Search</li>
+                <li class="seeker-option algorithm" id="da">Dijkstra Algorithm</li>
             </ul>
         </li>
         <li class="seeker-item" id="change">
