A Star operates as Dijkstra

--- a/main/Templates/main/seeker.html
+++ b/main/Templates/main/seeker.html
@@ -54,6 +54,7 @@
                 <li class="seeker-option algorithm" id="bfs">Breadth First Search</li>
                 <li class="seeker-option algorithm" id="dfs">Depth First Search</li>
                 <li class="seeker-option algorithm" id="da">Dijkstra Algorithm</li>
+                <li class="seeker-option algorithm" id="a-star">A Star Algorithm</li>
             </ul>
         </li>
         <li class="seeker-item" id="change">
