--- a/main/Templates/main/aboutme.html
+++ b/main/Templates/main/aboutme.html
@@ -83,8 +83,8 @@
             <p>
                 I have always been fascinated by the stories of our past. The sheer variety of cultures and socities
                 is amazing. If catastrophe wipes out the Internet Age I would try my hand as a history professor.
-                <a class="history_link" target="_blank" href="https://www.dancarlin.com/hardcore-history-series/">Dan Carlin's Hardcore History Podcast</a> is my favorite historical storytelling.
-                <a class="history_link" target="_blank" href="https://books.google.co.uk/books/about/A_History_of_the_World_in_Six_Glasses.html?id=-0t1nFKe0ZgC&redir_esc=y">The History of the World in Eight Glasses</a> demonstrates that simple products can change the world.
+                <a class="history_link size_one" target="_blank" href="https://www.dancarlin.com/hardcore-history-series/">Dan Carlin's Hardcore History Podcast</a> is my favorite historical storytelling.
+                <a class="history_link size_one" target="_blank" href="https://books.google.co.uk/books/about/A_History_of_the_World_in_Six_Glasses.html?id=-0t1nFKe0ZgC&redir_esc=y">The History of the World in Eight Glasses</a> demonstrates that simple products can change the world.
             </p>
         <h4>Reading</h4>
             <p>
