--- a/main/Templates/main/header.html
+++ b/main/Templates/main/header.html
@@ -3,14 +3,15 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="{% static 'style.css' %}" type="text/css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
    <body>
     <header role = "banner" class="banner">
         <h1> Remember the Alamo!</h1>
         <ul class="nav_bar">
-            <li class="nav_item"><a href="/" ><h3>Home</h3></a></li>
-            <li class="nav_item"><a href="/aboutme" ><h3>About Me</h3></a></li>
-            <li class="nav_item"><a href="/seeker"><h3>Play Seeker</h3></a></li>
+            <li class="nav_item size_shrink"><a href="/" ><h3>Home</h3></a></li>
+            <li class="nav_item size_shrink"><a href="/aboutme" ><h3>About Me</h3></a></li>
+            <li class="nav_item size_shrink"><a href="/seeker"><h3>Play Seeker</h3></a></li>
         </ul>
     </header>
     <div class="content">
